Changes for 1.2.2
* Change 'No Economic Victory' game property to 'Economic Victory' (ComradeKev)

* Fix displayed Victory City victory message (ComradeKev)

* Fix null pointer if trying to select factory in edit mode (ComradeKev)

* Update NWO map to version 1.7.2 (OnanTheBrBr)

* Fix bug (2933998) null pointer in MoreNAble IA Non Combat movement through sea zones (ComradeKev)

* Fix bug (2933797) Battle Calc in Edit Mode- removed unnecessary checks for edit mode (ComradeKev)

* Allow submersible subs to travel under enemy ships in combat and non-combat (except DDs) (ComradeKev)

* Update options panel height to 15 items to fit on smaller screens (ComradeKev)

* Fix bug (2933341) Exception if paratroop transport cost > bomber capacity (ComradeKev)
 
* Fix bug (2932947) paratroop checking code allowing naval ships to move through enemy SZ (ComradeKev)

Changes for 1.2.1

* Update game icons (ubernaut)

* Fix subs being able to move through enemy fleets in noncombat for WW2v2 (ComradeKev)

* Fix broken code around pacific test cases for new properties (ComradeKev)

* Remove the hardcoded productionRules for non-sea units during Shipyard initialization (ComradeKev)

* Fix bug 2925146 options panel overflows screen in a single column (ComradeKev)

* Fix GameParser to correctly read optional flag for players in the xml playerList (ComradeKev)
  
* Fix bug 2926226 fighter movement with owned carriers (ComradeKev)

* Update NWO xml to use the new figher/carrier properties (ComradeKev)

* Break up Fighter/Carrier production rules into atomic components and added several new game properties for them (ComradeKev)
	Produce fighters on carriers - New fighters can be placed on New carriers
	Produce new fighters on old carriers - New fighters can be placed on Old carriers
	Move existing fighters to new carriers - An existing fighter may be moved to a New carrier from an adjacent territory